force-app/main/default/objects/Knowledge__kav/fields/Article_Category__c.field-meta.xml
<CustomField>
    <fullName>Article_Category__c</fullName>
    <label>Article Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Travel information</fullName>
            </value>
            <value>
                <fullName>Booking</fullName>
            </value>
            <value>
                <fullName>General enquiry</fullName>
            </value>
            <value>
                <fullName>Before you travel</fullName>
            </value>
            <value>
                <fullName>FAQ</fullName>
                <isActive>false</isActive>
                <label>FAQ</label>
            </value>
            <value>
                <fullName>Payments</fullName>
                <isActive>false</isActive>
                <label>Payments</label>
            </value>
            <value>
                <fullName>Terms and conditions</fullName>
                <isActive>false</isActive>
                <label>Terms and conditions</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>