force-app/main/default/objects/Knowledge__kav/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Customisations</fullName>
            </value>
            <value>
                <fullName>Deal</fullName>
            </value>
            <value>
                <fullName>Deal FAQs</fullName>
            </value>
            <value>
                <fullName>Deal Pricing FAQs</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>General - Account</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>PIF</fullName>
            </value>
            <value>
                <fullName>Post Purchase</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Sales - Brochures</fullName>
            </value>
            <value>
                <fullName>Sales - Flights Only</fullName>
            </value>
            <value>
                <fullName>Sales - How to order</fullName>
            </value>
            <value>
                <fullName>Travel Advice</fullName>
            </value>
            <value>
                <fullName>Travel Documentation</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>