force-app/main/default/objects/Knowledge__kav/fields/Created_date__c.field-meta.xml
<CustomField>
    <fullName>Created_date__c</fullName>
    <formula>TEXT(DAY(DATEVALUE(ArticleCreatedDate))) +&apos;/&apos;+ TEXT(MONTH(DATEVALUE(ArticleCreatedDate))) +&apos;/&apos;+ TEXT(YEAR(DATEVALUE(ArticleCreatedDate)))</formula>
    <label>Created date</label>
    <type>Text</type>
</CustomField>