force-app/main/default/objects/Knowledge__kav/fields/KAV_ID__c.field-meta.xml
<CustomField>
    <fullName>KAV_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KAV ID</label>
    <type>Text</type>
</CustomField>