force-app/main/default/objects/Knowledge__kav/fields/Knowledge_Type__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Type__c</fullName>
    <label>Knowledge Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>