force-app/main/default/objects/Knowledge__kav/fields/Sequence_FAQ__c.field-meta.xml
<CustomField>
    <fullName>Sequence_FAQ__c</fullName>
    <label>Sequence FAQ</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>