force-app/main/default/objects/Knowledge__kav/listViews/Knowledge_View_IT.listView-meta.xml
<ListView>
    <fullName>Knowledge_View_IT</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>KAV_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>Knowledge View IT</label>
</ListView>