force-app/main/default/objects/Knowledge__kav/listViews/published_articles.listView-meta.xml
<ListView>
    <fullName>published_articles</fullName>
    <columns>TITLE</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>Question__c</columns>
    <columns>Answer__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Visible_on_Website__c</columns>
    <filterScope>Everything</filterScope>
    <label>Published Articles</label>
</ListView>