force-app/main/default/objects/Knowledge__kav/listViews/Published_Articles_Web.listView-meta.xml
<ListView>
    <fullName>Published_Articles_Web</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>Answer__c</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>Visible_on_Website__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Visible_on_Website__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>Knowledge_Type__c</field>
        <operation>notEqual</operation>
        <value>Community</value>
    </filters>
    <label>Published Articles - Web</label>
</ListView>